--- a/app/electronic-services.html
+++ b/app/electronic-services.html
@@ -64,16 +64,16 @@
         <div class="col col-2 pr-0">
             <div class="row mr-0 flex-column">
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> خدمات الرعاية </a>
+                    <a  class="nav--btn cursor pointer"> خدمات الرعاية </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> خدمات المنشئات </a>
+                    <a  class="nav--btn pointer"> خدمات المنشئات </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> تواصل معنا </a>
+                    <a  class="nav--btn pointer"> تواصل معنا </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> الأسئلة الشائعة </a>
+                    <a  class="nav--btn pointer"> الأسئلة الشائعة </a>
                 </div>
             </div>
 
@@ -94,16 +94,16 @@
                 <div class="col col-12 pr-0">
                     <div class="row mr-0 flex-column">
                         <div class="col col-12 my-2 pr-0">
-                            <a href="index.html" class="nav--btn rounded-0"> تأكيد الموعد </a>
+                            <a  class="nav--btn rounded-0 pointer"> تأكيد الموعد </a>
                         </div>
                         <div class="col col-12 my-2 pr-0">
-                            <a href="index.html" class="white--btn rounded-0"> اسم العميل </a>
+                            <a  class="white--btn rounded-0 pointer"> اسم العميل </a>
                         </div>
                         <div class="col col-12 my-2 pr-0">
-                            <a href="index.html" class="white--btn rounded-0"> رقم الهوية </a>
+                            <a  class="white--btn rounded-0 pointer"> رقم الهوية </a>
                         </div>
                         <div class="col col-12 my-2 pr-0">
-                            <a href="index.html" class="white--btn rounded-0"> رقم الجوال </a>
+                            <a  class="white--btn rounded-0 pointer"> رقم الجوال </a>
                         </div>
                     </div>
 
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="col col-5 pr-0">
-            <img src="assets/images/doctor.png" alt="">
+            <img  class="doctor--img" src="assets/images/doctor.png" alt="">
         </div>
     </div>
 
