--- a/app/index.html
+++ b/app/index.html
@@ -64,16 +64,16 @@
         <div class="col col-2 pr-0">
             <div class="row mr-0 flex-column">
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> خدمات الرعاية </a>
+                    <a  class="nav--btn cursor pointer"> خدمات الرعاية </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> خدمات المنشئات </a>
+                    <a  class="nav--btn pointer"> خدمات المنشئات </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> تواصل معنا </a>
+                    <a  class="nav--btn pointer"> تواصل معنا </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> الأسئلة الشائعة </a>
+                    <a  class="nav--btn pointer"> الأسئلة الشائعة </a>
                 </div>
             </div>
             <div class="row mx-0 mt-5">
@@ -96,12 +96,12 @@
             <div class="input-group mb-3 search--box">
                 <input type="text" class="form-control search--input" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <div class="input-group-append">
-                    <span class="input-group-text bg-white search--span" id="basic-addon2">البحث</span>
+                    <span class="input-group-text bg-white search--span text-danger bold " id="basic-addon2">البحث</span>
                 </div>
             </div>
         </div>
         <div class="col col-5 pr-0">
-            <img src="assets/images/doctor.png" alt="">
+            <img class="doctor--img" src="assets/images/doctor.png" alt="">
         </div>
     </div>
 
