--- a/app/servieces-guide.html
+++ b/app/servieces-guide.html
@@ -64,25 +64,25 @@
         <div class="col col-2 pr-0">
             <div class="row mr-0 flex-column">
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> خدمات الرعاية </a>
+                    <a  class="nav--btn cursor pointer"> خدمات الرعاية </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> خدمات المنشئات </a>
+                    <a  class="nav--btn pointer"> خدمات المنشئات </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> تواصل معنا </a>
+                    <a  class="nav--btn pointer"> تواصل معنا </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> الأسئلة الشائعة </a>
+                    <a  class="nav--btn pointer"> الأسئلة الشائعة </a>
                 </div>
             </div>
 
         </div>
         <div class="col col-5 pr-0 main--content">
-            <img class="appointment--img" src="assets/images/appointment.png" alt="">
+            <img class="appointment--img rounded-2" src="assets/images/appointment.png" alt="">
         </div>
         <div class="col col-5 pr-0">
-            <img src="assets/images/doctor.png" alt="">
+            <img  class="doctor--img" src="assets/images/doctor.png" alt="">
         </div>
     </div>
 
