--- a/app/most-used.html
+++ b/app/most-used.html
@@ -64,16 +64,16 @@
         <div class="col col-2 pr-0">
             <div class="row mr-0 flex-column">
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> خدمات الرعاية </a>
+                    <a  class="nav--btn cursor pointer"> خدمات الرعاية </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> خدمات المنشئات </a>
+                    <a  class="nav--btn pointer"> خدمات المنشئات </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> تواصل معنا </a>
+                    <a  class="nav--btn pointer"> تواصل معنا </a>
                 </div>
                 <div class="col col-12 my-2 pr-0">
-                    <a href="index.html" class="nav--btn"> الأسئلة الشائعة </a>
+                    <a  class="nav--btn pointer"> الأسئلة الشائعة </a>
                 </div>
             </div>
             <div class="row mx-0 mt-5 flex-row-reverse">
@@ -93,16 +93,16 @@
                 <div class="col col-12 pr-0">
                     <div class="row mr-0 flex-column">
                         <div class="col col-12 my-2 pr-0">
-                            <a href="index.html" class="nav--btn rounded-0"> الأكثر استخداما </a>
+                            <a  class="nav--btn rounded-0 pointer"> الأكثر استخداما </a>
                         </div>
                         <div class="col col-12 my-2 pr-0">
-                            <a href="index.html" class="white--btn rounded-0"> الرعاية الطبية  </a>
+                            <a  class="white--btn rounded-0 pointer"> الرعاية الطبية  </a>
                         </div>
                         <div class="col col-12 my-2 pr-0">
-                            <a href="index.html" class="white--btn rounded-0"> متابعة المريض </a>
+                            <a  class="white--btn rounded-0 pointer"> متابعة المريض </a>
                         </div>
                         <div class="col col-12 my-2 pr-0">
-                            <a href="index.html" class="white--btn rounded-0"> استفسارات </a>
+                            <a  class="white--btn rounded-0 pointer"> استفسارات </a>
                         </div>
                     </div>
 
@@ -110,7 +110,7 @@
             </div>
         </div>
         <div class="col col-5 pr-0">
-            <img src="assets/images/doctor.png" alt="">
+            <img  class="doctor--img" src="assets/images/doctor.png" alt="">
         </div>
     </div>
 
